# rbot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
examples/config/: linux_boot_machine.py  paramiko_machine.py  picocom_uboot_machine.py  picocom_uefi_machine.py  u-boot_linux_boot_machine.py  uefi_machine.py
examples/tc/: linux_test.py  local_host_test.py  paramiko_test.py  uboot_boot_test.py  uefi_boot_test.py
generators/: logparser.py  txtlog.py
rbot/: __init__.py  context.py  decorators.py  error.py  exceptions.py  loader.py  log.py  main.py  role.py
rbot/channel/: __init__.py  channel.py  common.py  serial.py  shell.py  ssh.py
rbot/machine/: __init__.py  machine.py
rbot/machine/board/: __init__.py  board.py  linux.py  uboot.py  uefi.py
rbot/machine/channel/: __init__.py  channel.py  null.py  paramiko.py  pyserial.py  subprocess.py
rbot/machine/connector/: __init__.py  common.py  connector.py  paramiko.py  pyserial.py  ssh.py
rbot/machine/shell/: __init__.py  shell.py
rbot/machine/shell/linux/: __init__.py  ash.py  auth.py  bash.py  build.py  copy.py  git.py  linux_shell.py  path.py  special.py  util.py  workdir.py
test/: shell_test.py  ssh_test.py
