[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
mypy_path = "stubs/:./"
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = false
