[metadata]
name = rbot
version = 0.1.0
description = rbot test & development automation tool
long_description = README.md
long_description_content_type = text/markdown
license = "GPL-3.0-or-later"
license_file = LICENSE
author = Roman Guskov
author_email = guskov.roman@gmail.com
home_page = https://github.com/guskov-roman/rbot.git
platforms = unix, linux
requires_python = >=3.8
project_urls =
    Source=https://github.com/guskov-roman/rbot
    Tracker=https://github.com/guskov-roman/rbot/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers

[options]
install_requires =
    termcolor2
    paramiko
    pyserial
    pytest

python_requires = >=3.6
zip_safe = no

packages = find:

[options.packages.find]
include =
    rbot
    rbot.*

[entry_points]
console_scripts =
    rbot=rbot.main:main

[flake8]
ignore = E203, E266, E501, F541, W503, D100, D104, D105, D202
max-line-length = 80
max-complexity = 22
select = B,C,E,F,W,T4,B9,D
